fix og image address

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta property="og:title" content="AakashS" />
     <meta property="og:description" content="Just a hobby developer struggling to write code." />
     <meta property="theme-color" content="#87ceeb" />
-    <meta property="og:image" content="assets/favicon.png" />
+    <meta property="og:image" content="https://Aakash-kun.github.io/assets/favicon.png" />
     <link rel="icon" href="assets/favicon.png">
     <title>AakashS</title>
     <link rel="stylesheet" href="style.css">
