--- a/about.html
+++ b/about.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About AakashS</title>
-    <link rel="icon" href="../../assets/heart.png">
-    <link rel="stylesheet" href="about.css">
-    <script src="../home/nav.js" defer></script>
+    <link rel="icon" href="assets/heart.png">
+    <link rel="stylesheet" href="src/about.css">
+    <script src="src/nav.js" defer></script>
 </head>
 <body>
     <div class="container">
@@ -16,9 +16,9 @@
                 <div class="logo">
                     AS
                 </div>
-                <button class="nav-toggle"><img src="../../assets/bars-solid.png" alt=""></button>
+                <button class="nav-toggle"><img src="assets/bars-solid.png" alt=""></button>
                 <ul class="menu" show="false">
-                    <li><a href="../home/index.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="about.html" class="active">About</a></li>
                     <li><a href="https://myanimelist.net/animelist/AakashS" target="_blank">Anime</a></li>
                     <li><a href="https://myanimelist.net/mangalist/AakashS" target="_blank">Manga</a></li>
@@ -33,16 +33,16 @@
         <footer class="footer">
             <div class="contacts">
                 <a href="https://discord.com/users/707964352199786648" target="_blank">
-                    <img src="../../assets/discord-brands.png" alt="">
+                    <img src="assets/discord-brands.png" alt="">
                 </a>
                 <a href="https://github.com/Aakash-kun" target="_blank">
-                    <img src="../../assets/github-brands.png" alt="">
+                    <img src="assets/github-brands.png" alt="">
                 </a>
                 <a href="https://www.instagram.com/_aakash_shivhare_/" target="_blank">
-                    <img src="../../assets/instagram-brands.png" alt="">
+                    <img src="assets/instagram-brands.png" alt="">
                 </a>
                 <a href="https://twitter.com/AakashS_" target="_blank">
-                    <img src="../../assets/twitter-brands.png" alt="">
+                    <img src="assets/twitter-brands.png" alt="">
                 </a>
             </div>
         </footer>
