--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <meta property="og:description" content="Just a hobby developer struggling to write code." />
     <meta property="theme-color" content="#87ceeb" />
     <meta property="og:image" content="https://Aakash-kun.github.io/assets/favicon.png" />
-    <link rel="icon" href="../../assets/favicon.png">
+    <link rel="icon" href="assets/favicon.png">
     <title>AakashS</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="nav.js" defer></script>
+    <link rel="stylesheet" href="src/style.css">
+    <script src="src/nav.js" defer></script>
 </head>
 <body>
     <div class="container">
@@ -20,10 +20,10 @@
                 <div class="logo">
                     AS
                 </div>
-                <button class="nav-toggle"><img src="../../assets/bars-solid.png" alt=""></button>
+                <button class="nav-toggle"><img src="assets/bars-solid.png" alt=""></button>
                 <ul class="menu" show="false">
                     <li><a href="index.html" class="active">Home</a></li>
-                    <li><a href="../about/about.html">About</a></li>
+                    <li><a href="about.html">About</a></li>
                     <li><a href="https://myanimelist.net/animelist/AakashS" target="_blank">Anime</a></li>
                     <li><a href="https://myanimelist.net/mangalist/AakashS" target="_blank">Manga</a></li>
                 </ul>
@@ -33,22 +33,22 @@
         <main class="info-container">
             <div class="name">Aakash</div>
             <div class="text">A hobby Developer struggling to write code.</div>
-            <div class="about"><a href="../about/about.html">about me</a></div>
+            <div class="about"><a href="about.html">about me</a></div>
         </main>
 
         <footer class="footer">
             <div class="contacts">
                 <a href="https://discord.com/users/707964352199786648" target="_blank">
-                    <img src="../../assets/discord-brands.png" alt="">
+                    <img src="assets/discord-brands.png" alt="">
                 </a>
                 <a href="https://github.com/Aakash-kun" target="_blank">
-                    <img src="../../assets/github-brands.png" alt="">
+                    <img src="assets/github-brands.png" alt="">
                 </a>
                 <a href="https://www.instagram.com/_aakash_shivhare_/" target="_blank">
-                    <img src="../../assets/instagram-brands.png" alt="">
+                    <img src="assets/instagram-brands.png" alt="">
                 </a>
                 <a href="https://twitter.com/AakashS_" target="_blank">
-                    <img src="../../assets/twitter-brands.png" alt="">
+                    <img src="assets/twitter-brands.png" alt="">
                 </a>
             </div>
         </footer>
