take me to home!

--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
         <header>
             <nav class="navbar">
                 <div class="logo">
-                    AS
+                    <a href="https://aakashs.is-a.dev/">AS</a>
                 </div>
                 <button class="nav-toggle"><img src="assets/bars-solid.png" alt=""></button>
                 <ul class="menu" show="false">
