Comment About me section becoz i am too lazy to finish it.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <button class="nav-toggle"><img src="assets/bars-solid.png" alt=""></button>
                 <ul class="menu" show="false">
                     <li><a href="index.html" class="active">Home</a></li>
-                    <li><a href="about.html">About</a></li>
+<!--                     <li><a href="about.html">About</a></li> -->
                     <li><a href="https://myanimelist.net/animelist/AakashS" target="_blank">Anime</a></li>
                     <li><a href="https://myanimelist.net/mangalist/AakashS" target="_blank">Manga</a></li>
                 </ul>
@@ -33,7 +33,7 @@
         <main class="info-container">
             <div class="name">Aakash</div>
             <div class="text">A hobby Developer struggling to write code.</div>
-            <div class="about"><a href="about.html">about me</a></div>
+<!--             <div class="about"><a href="about.html">about me</a></div> -->
         </main>
 
         <footer class="footer">
